spot fix: hard overwrite shadow host visibility

--- a/spot/entrypoints/content/style.css
+++ b/spot/entrypoints/content/style.css
@@ -8,6 +8,10 @@
   all: initial;
 }
 
+spot-ui {
+  visibility: visible!important;
+  display: block!important;
+}
 
 .body {
   width: 100vw;
